First end-points covered by Swagger: 'auth login, get user by id and delete user'
