# internal/handler/dto/error_dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"User not found"`
+}
